@@ -4,7 +4,7 @@ To compile a libbde DLL using MinGW you'll need:
 * MinGW with Windows Crypto API (libadvapi32)
 
 To build a DLL using MinGW use:
-mingw32-configure --enable-winapi=yes
+mingw32-configure --prefix=/opt/local/i386-mingw32 --enable-winapi=yes
 mingw32-make
 
 It is recommended that you use WINAPI support but it is possible to compile 
@@ -12,8 +12,11 @@ libbde without it (--enable-winapi=no). Without WINAPI support libbde will
 need a MinGW build of openssl libcrypto for MD5 and SHA1 support.
 The default behaviour is that libbde will try to auto-detect MinGW and enable WINAPI support.
 
-If mingw32-configure and mingw32-make are not available you'll need to build
-it by hand. For this you can use a script similar to the following:
+If mingw32-configure and mingw32-make are not available you can build it with:
+./configure --host=i386-mingw32 --prefix=/opt/local/i386-mingw32 --enable-winapi=yes
+make
+
+If this does not work try a script similar to the following:
 
 #!/bin/sh
 CC=/opt/local/bin/i386-mingw32-gcc
@@ -26,7 +29,7 @@ MINGWFLAGS="-mwin32 -mconsole -march=i586 "
 CFLAGS="$MINGWFLAGS"
 CXXFLAGS="$MINGWFLAGS"
 
-CC=$CC CXX=$CXX AR=$AR OBJDUMP=$OBJDUMP RANLIB=$RANLIB STRIP=$STRIP ./configure --target=i586-mingw32msvc --host=i586 --enable-winapi=yes
+CC=$CC CXX=$CXX AR=$AR OBJDUMP=$OBJDUMP RANLIB=$RANLIB STRIP=$STRIP ./configure --host=i586-mingw32msvc --prefix=/opt/local/i386-mingw32 --enable-winapi=yes
 CC=$CC CXX=$CXX AR=$AR OBJDUMP=$OBJDUMP RANLIB=$RANLIB STRIP=$STRIP CFLAGS="$CFLAGS" CXXFLAGS="$CXXFLAGS" make
 
 You should end up with the following DLL:
@@ -35,4 +38,7 @@ libbde-<version>/libbde/.libs/libbde-1.dll
 And the following executables:
 libbde-<version>/bdetools/.libs/bdeinfo.exe
 libbde-<version>/bdetools/.libs/bdemount.exe
+
+To install the libbde DLL in the MinGW build tree use:
+sudo make install
 
